// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-number-field Renders \`c-number-field\` with custom props 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <label
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          disabled="disabled"
          max="21"
          min="19"
          name="customName"
          type="number"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-number-field Renders \`c-number-field\` with default props 1`] = `
<div
  class="v-input theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          name="value"
          type="number"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;
